<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingTop="10sp"
    android:paddingRight="10sp"
    android:paddingBottom="10sp"
    tools:context=".MainActivity1">

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/Textname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/Textname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Textname"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/surname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/TextSurname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/TextSurname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextSurname"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Textname" />

    <TextView
        android:id="@+id/TextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextSurname" />

    <TextView
        android:id="@+id/TextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextDay" />

    <TextView
        android:id="@+id/TextComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/comments2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextTime" />

    <TextView
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/TextDay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/TextSurname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextDay"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/TextTime"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/TextDay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextTime"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/comments2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/TextComments"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/TextComments"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextComments" />

    <Button
        android:id="@+id/insert_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="nextAct"
        android:text="@string/iinfo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextSubj" />

    <TextView
        android:id="@+id/TextSubj"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text="Предмет"
        android:textSize="30sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextComments"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/subj2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:hint="Введите предмет"
        app:layout_constraintBottom_toBottomOf="@id/TextSubj"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/TextSubj"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextSubj" />

</androidx.constraintlayout.widget.ConstraintLayout>